@@ -3,26 +3,36 @@ package hu.bme.aut.haulagecompany.service;
 import hu.bme.aut.haulagecompany.model.Good;
 import hu.bme.aut.haulagecompany.model.LorrySite;
 import hu.bme.aut.haulagecompany.model.Vehicle;
+import hu.bme.aut.haulagecompany.model.dto.GoodDTO;
 import hu.bme.aut.haulagecompany.model.dto.LorrySiteDTO;
+import hu.bme.aut.haulagecompany.model.dto.VehicleDTO;
+import hu.bme.aut.haulagecompany.repository.GoodRepository;
 import hu.bme.aut.haulagecompany.repository.LorrySiteRepository;
+import hu.bme.aut.haulagecompany.repository.VehicleRepository;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
-import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 @Service
 public class LorrySiteService {
     private final LorrySiteRepository lorrySiteRepository;
+    private final GoodRepository goodRepository;
+    private final VehicleRepository vehicleRepository;
     private final ModelMapper modelMapper;
 
     @Autowired
     public LorrySiteService(
             LorrySiteRepository lorrySiteRepository,
-            ModelMapper mapper) {
+            ModelMapper mapper,
+            GoodRepository goodRepository,
+            VehicleRepository vehicleRepository) {
         this.lorrySiteRepository = lorrySiteRepository;
         this.modelMapper = mapper;
+        this.goodRepository = goodRepository;
+        this.vehicleRepository = vehicleRepository;
     }
 
     public LorrySiteDTO createLocation(LorrySiteDTO lorrySiteDTO) {
@@ -37,7 +47,7 @@ public class LorrySiteService {
         List<LorrySite> lorrySites = (List<LorrySite>) lorrySiteRepository.findAll();
         return lorrySites.stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public LorrySiteDTO getLocationById(Long id) {
@@ -53,6 +63,22 @@ public class LorrySiteService {
             updatedLocation.setId(id);
             updatedLocation.setName(updatedLocationDTO.getName());
             updatedLocation.setAddress(updatedLocationDTO.getAddress());
+            List<Long> goodIDs = new ArrayList<>();
+            if(updatedLocationDTO.getGoodDTOs() != null) {
+                for (GoodDTO goodDTO : updatedLocationDTO.getGoodDTOs()) {
+                    goodIDs.add(goodDTO.getId());
+                }
+            }
+            List<Good> goods = StreamSupport.stream(goodRepository.findAllById(goodIDs).spliterator(), false).toList();
+            updatedLocation.setGoods(goods);
+            List<Long> vehicleIDs = new ArrayList<>();
+            if(updatedLocationDTO.getVehicleDTOs() != null) {
+                for (VehicleDTO vehicleDTO : updatedLocationDTO.getVehicleDTOs()) {
+                    goodIDs.add(vehicleDTO.getId());
+                }
+            }
+            List<Vehicle> vehicles = StreamSupport.stream(vehicleRepository.findAllById(vehicleIDs).spliterator(), false).toList();
+            updatedLocation.setVehicles(vehicles);
             LorrySite savedLocation = lorrySiteRepository.save(updatedLocation);
             return convertToDTO(savedLocation);
         } else {
